--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <ul>
+        <ul class="posts">
           {% for post in site.posts %}
             <li>
               <a href="{{ post.url }}">{{ post.title }}</a>
