--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,14 +21,8 @@
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-
-        <ul class="posts">
-          {% for post in site.posts %}
-            <li>
-              <a href="{{ post.url }}">{{ post.title }}</a>
-            </li>
-          {% endfor %}
-        </ul>
+        
+        <a href="/about">About</a>
       </header>
       <section>
 
